deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zurich-weather-app-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: zurich-weather-app
